--- a/env.example
+++ b/env.example
@@ -4,14 +4,14 @@ DB_PASS=
 DB_PORT=3306
 PORT=3000
 DB_NAME=si_sertosa2_6411ce4229fd4
-SECRET_PASSWORD=6411ce4229fe2
+SECRET_PASSWORD=xxxxxxxxxxx
 HOST=http://localhost:3000
-VAPID_PUBLIC_KEY=asdasdasdaot7NRL72XcpXCBWkDH-aARc1NjLt6v0KSyye-uhG-sPkga05D_pwEULs-rRecKz1ZiYLyzJtJLJDM
-VAPID_PRIVATE_KEY=asdasd-9-mfrEEvBxx91KfqGO9yHMij-8eGskaa9UK4
+VAPID_PUBLIC_KEY=xxxxxxxxxxxxx
+VAPID_PRIVATE_KEY=xxxxxxxxxxxxx
 APP_NOMBRE=SERTOSA
 APP_RAZONSOCIAL=S.A. de C.V.
 APP_PRODURL=http://localhost:8000
-NODEMAILER_HOST=rs6-nyc.x.com
+NODEMAILER_HOST=x.com
 NODEMAILER_PORT=465
 NODEMAILER_AUTH_USER=x@x.com.mx
 NODEMAILER_AUTH_PASS=123456
